bloonix-webgui (0.71) released at 2015-09-18

    * Filter by host classes are now case sensitive.

bloonix-webgui (0.70) released at 2015-09-17

    * Fixed class search if whitespaces are in the class name.

bloonix-webgui (0.69) released at 2015-09-17

    * Fixed different column in table dependency and allow null values.
    * Add new host columns os_class, hw_class and env_class.

bloonix-webgui (0.68) released at 2015-09-08

    * Improved the order for host lists, so that hosts that were not OK
      in the last 60 minutes are displayed before all other hosts.
    * Fixed duplicate pager at the bottom of some tables.
    * Fixed host form, so that only groups are selectable in which
      the user is a member.
    * Sort services by service name in templates.

bloonix-webgui (0.67) released at 2015-09-06

    * Kicked default Host classes.
    * Added the possibility to configure the monitoring screen.

bloonix-webgui (0.66) released at 2015-09-06

    * Increased chart alignment from 3 to 8.
    * Added route /administration/hosts/$id.
    * Fixed the issue that services in templates couldn't be deleted.
    * A lightning icon will be displayed if a host or service was not
      OK within the last 60 minutes.
    * Fixed link and text of sysinfo.
    * Renamed device_class to host_class.
    * Implemented system_class and location_class.

bloonix-webgui (0.65) released at 2015-09-01

    * Fixed Elasticsearch template: dynamic_templates includes now
      double, float, long and integer.
    * The Elasticsearch template is now updated automatically.

bloonix-webgui (0.64) released at 2015-08-31

    * The description field of host template can now be empty.
    * Max attempts can be set to 0 to disable notifications.

bloonix-webgui (0.63) released at 2015-08-24

    * Fixed: result data are not empty any more.

bloonix-webgui (0.62) released at 2015-08-23

    * If the parameter is_demo is set to true and if the logged in user called "demo",