@@ -8,6 +8,6 @@ Homepage: http://www.bloonix.de/
 
 Package: bloonix-webgui
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, bloonix-core (>= 0.23), bloonix-webgui-core
+Depends: ${shlibs:Depends}, ${misc:Depends}, bloonix-dbi (>= 0.11), bloonix-core (>= 0.23), bloonix-webgui-core
 Description: Bloonix WebGUI
  This is the web application of Bloonix.
